# fasted

./: .gitignore  Cargo.toml  README.md  build.rs
arch/x86_64/: abi.inc  arena.S  cell.S  len.S  speq.S
microbenchmarks/: cell_loop.S  cell_loop.c  cell_loop_bench  perf.data
src/: arena.rs  len.rs  lib.rs  speq.rs
