[package]
name = "fasted"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
libc = "0.2.178"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.8.1"

[build-dependencies]
nasm-rs = "0.3.1"

[features]
base = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
